--- a/assets/scss/pages/document.scss
+++ b/assets/scss/pages/document.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'ITCAvantGarde';
-  src: url("../../fonts/itc-avant-garde.otf"); }
+  src: url("../../fonts/itc-avant-garde.otf");
+}
 body {
   margin: auto;
     font-family: 'ITCAvantGarde';
