--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,766 @@
+body,
+html {
+  background-color: #f8f8f8;
+  font-family: Verdana, sans-serif; }
 
+.strategy {
+  max-width: 960px;
+  margin: 0 auto; }
+  .strategy .title {
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold; }
+  .strategy .subtitle {
+    padding-bottom: 5px;
+    color: #292929;
+    border-bottom: 1px solid #5a8fa6;
+    font-size: 15px;
+    font-weight: bold; }
+  .strategy div.has-big-hexa {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around; }
+  .strategy .infos {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    cursor: pointer; }
+    .strategy .infos span {
+      color: #636363; }
+
+.svg-container {
+  display: flex;
+  position: relative;
+  overflow: hidden;
+  justify-content: flex-end; }
+
+.svg-container .arrow {
+  position: absolute;
+  top: 25%;
+  left: 27.5%;
+  width: 8px;
+  height: 20px; }
+
+.svg-container .percentage {
+  position: absolute;
+  top: 25%;
+  left: 10%; }
+
+.svg-container .percentage {
+  position: absolute;
+  top: 25%;
+  left: 20%; }
+
+.svg-container .euro {
+  position: absolute;
+  top: 25%;
+  left: 25%; }
+
+.svg-container .line {
+  position: absolute;
+  top: 43%;
+  left: 20%; }
+
+.svg-container .stat {
+  position: absolute;
+  top: 30%;
+  left: 20%; }
+
+.icon {
+  fill: #f8f8f8;
+  stroke: #5a8fa6;
+  stroke-width: 5px; }
+
+.pillier svg,
+.priority svg {
+  width: 80%; }
+
+.priority .priority-1 {
+  fill: #98c67f; }
+
+.priority .priority-2 {
+  fill: #f0847a; }
+
+.priority .priority-3 {
+  fill: #fcc04b; }
+
+.pillier .pillier-1,
+.pillier .pillier-2 {
+  fill: #5a8fa6;
+  stroke: #fff; }
+
+figure {
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center; }
+  figure figcaption {
+    display: flex;
+    position: absolute;
+    max-width: 40%;
+    margin: 0 auto;
+    color: #fff;
+    text-align: center;
+    font-size: 90%;
+    flex-wrap: wrap;
+    line-height: 25px; }
+
+.has-big-hexa div {
+  max-width: 300px; }
+
+.has-big-hexa div p:last-child {
+  color: #727272;
+  line-height: 22px; }
+
+.objectif-1 ul,
+.objectif-2 ul,
+.objectif-3 ul,
+.objectif-4 ul {
+  display: flex;
+  position: relative;
+  margin-bottom: 1em;
+  margin-left: -30px;
+  padding: 3em;
+  justify-content: space-around;
+  list-style-type: none; }
+  .objectif-1 ul li,
+  .objectif-2 ul li,
+  .objectif-3 ul li,
+  .objectif-4 ul li {
+    text-align: center; }
+    .objectif-1 ul li:hover,
+    .objectif-2 ul li:hover,
+    .objectif-3 ul li:hover,
+    .objectif-4 ul li:hover {
+      background-color: #5a8fa6; }
+    .objectif-1 ul li h1,
+    .objectif-2 ul li h1,
+    .objectif-3 ul li h1,
+    .objectif-4 ul li h1 {
+      position: absolute;
+      top: -48px;
+      left: 10px;
+      color: #000;
+      font-size: 15px; }
+    .objectif-1 ul li span,
+    .objectif-2 ul li span,
+    .objectif-3 ul li span,
+    .objectif-4 ul li span {
+      position: absolute;
+      top: 140%;
+      left: 5px; }
+
+/**
+ * ************************************************************************\
+ * OBJECTIF 1
+ * \*************************************************************************
+ */
+.objectif-1 ul {
+  position: relative;
+  margin-top: 50px; }
+
+.objectif-1 ul li {
+  display: inline-block;
+  position: relative;
+  width: 4%;
+  height: 0;
+  padding-top: 4%;
+  color: black;
+  border: 1px solid #000;
+  -moz-border-radius: 55%;
+  -webkit-border-radius: 50%; }
+
+.objectif-1 li:nth-child(2)::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: -421.2766%;
+  width: 480%;
+  height: 1px;
+  color: red;
+  background: #000; }
+
+.objectif-1 li:nth-child(3) {
+  top: -10px;
+  width: 5%;
+  height: 0;
+  padding-top: 5%; }
+
+.objectif-1 li:nth-child(3)::before {
+  content: '';
+  position: absolute;
+  top: 40%;
+  left: -336.17021%;
+  width: 450%;
+  height: 1px;
+  color: red;
+  background: #000;
+  transform: translateY(6px) translateX(-2px) rotate(-2deg); }
+
+.objectif-1 li:nth-child(4) {
+  top: -20px;
+  width: 6%;
+  height: 0;
+  padding-top: 6%; }
+
+.objectif-1 li:nth-child(4)::before {
+  content: '';
+  position: absolute;
+  top: 40%;
+  left: -239.39394%;
+  width: 310.34483%;
+  height: 1px;
+  color: red;
+  background: #000;
+  transform: translateY(5px) translateX(-1px) rotate(-2deg); }
+
+.objectif-1 li:last-child {
+  top: -40px;
+  width: 7%;
+  height: 0;
+  padding-top: 7%;
+  background: #5a8fa6; }
+
+.objectif-1 li:last-child::before {
+  content: '';
+  position: absolute;
+  top: 51.66667%;
+  left: -244%;
+  width: 300%;
+  height: 1px;
+  background: #000;
+  transform: translateY(7px) translateX(-1px) rotate(-2deg); }
+
+/**
+ * ************************************************************************\
+ * OBJECTIF 2
+ * \*************************************************************************
+ */
+.objectif-2 ul {
+  position: relative;
+  margin-top: 55px; }
+
+.objectif-2 ul li {
+  display: inline-block;
+  position: relative;
+  width: 4%;
+  height: 0;
+  padding-top: 4%;
+  color: black;
+  border: 1px solid #000;
+  border-radius: 55%;
+  text-align: center; }
+
+.objectif-2 li:nth-child(2) {
+  top: -4px;
+  width: 5%;
+  height: 0;
+  padding-top: 5%; }
+
+.objectif-2 li:nth-child(2)::before {
+  content: '';
+  position: absolute;
+  top: 36.36364%;
+  left: -320%;
+  width: 366.66667%;
+  height: 1px;
+  background: #000;
+  transform: translateY(7px) translateX(-1px) rotate(-1deg); }
+
+.objectif-2 li:nth-child(3) {
+  top: -10px;
+  width: 6%;
+  height: 0;
+  padding-top: 6%; }
+
+.objectif-2 li:nth-child(3)::before {
+  content: '';
+  position: absolute;
+  top: 33.33333%;
+  left: -285.71429%;
+  width: 338.46154%;
+  height: 1px;
+  background: #000;
+  transform: translateY(8px) translateX(-1px) rotate(-1deg); }
+
+.objectif-2 li:nth-child(4) {
+  top: -15px;
+  width: 6.5%;
+  height: 0;
+  padding-top: 6.5%; }
+
+.objectif-2 li:nth-child(4)::before {
+  content: '';
+  position: absolute;
+  top: 33.33333%;
+  left: -300%;
+  width: 360%;
+  height: 1px;
+  background: #000;
+  transform: translateY(8px) translateX(-1px) rotate(-1.5deg); }
+
+.objectif-2 li:last-child {
+  top: -22px;
+  width: 7%;
+  height: 0;
+  padding-top: 7%;
+  background: #5a8fa6; }
+
+.objectif-2 li:last-child::before {
+  content: '';
+  position: absolute;
+  top: 34.88372%;
+  left: -241.50943%;
+  width: 300%;
+  height: 1px;
+  background: #000;
+  transform: translateY(7px) translateX(-1px) rotate(-1deg); }
+
+/**
+ * ************************************************************************\
+ * OBJECTIF 3
+ * \*************************************************************************
+ */
+.objectif-3 ul {
+  position: relative;
+  margin-top: 55px; }
+
+.objectif-3 ul li {
+  display: inline-block;
+  position: relative;
+  width: 4%;
+  height: 0;
+  padding-top: 4%;
+  color: black;
+  border: 1px solid #000;
+  border-radius: 55%;
+  text-align: center; }
+
+.objectif-3 li:nth-child(2) {
+  top: 10px;
+  width: 3.5%;
+  height: 0;
+  padding-top: 3.5%; }
+
+.objectif-3 li:nth-child(2)::before {
+  content: '';
+  position: absolute;
+  top: 20%;
+  left: -472%;
+  width: 512%;
+  height: 1px;
+  background: #000;
+  transform: translateY(7px) translateX(-1px) rotate(3deg); }
+
+.objectif-3 li:nth-child(3) {
+  top: -8px;
+  width: 5%;
+  height: 0;
+  padding-top: 5%; }
+
+.objectif-3 li:nth-child(3)::before {
+  content: '';
+  position: absolute;
+  top: 48.19277%;
+  left: -341.33333%;
+  width: 393.84615%;
+  height: 1px;
+  background: #000;
+  transform: translateY(7px) translateX(-1px) rotate(-4deg); }
+
+.objectif-3 li:nth-child(4) {
+  top: -18px;
+  width: 6%;
+  height: 0;
+  padding-top: 6%; }
+
+.objectif-3 li:nth-child(4)::before {
+  content: '';
+  position: absolute;
+  top: 42.10526%;
+  left: -301.17647%;
+  width: 360.56338%;
+  height: 1px;
+  background: #000;
+  transform: translateY(6.7px) translateX(-1px) rotate(-2deg); }
+
+.objectif-3 li:last-child {
+  top: -24px;
+  width: 7%;
+  height: 0;
+  padding-top: 7%;
+  background: #5a8fa6; }
+
+.objectif-3 li:last-child::before {
+  content: '';
+  position: absolute;
+  top: 37.5%;
+  left: -247.42268%;
+  width: 300%;
+  height: 1px;
+  background: #000;
+  transform: translateY(7px) translateX(-1px) rotate(-1deg); }
+
+/**
+ * ************************************************************************\
+ * OBJECTIF 4
+ * \*************************************************************************
+ */
+.objectif-4 ul li {
+  position: relative;
+  width: 7%;
+  height: 0;
+  padding-top: 7%;
+  border: 1px solid #000;
+  border-radius: 55%; }
+
+.objectif-4 ul li::before {
+  content: '';
+  position: absolute;
+  top: 41.66667%;
+  left: -233.33333%;
+  width: 300%;
+  height: 1px;
+  background: #000; }
+
+.objectif-4 ul li:first-child::before {
+  display: none; }
+
+.objectif-4 ul li:last-child {
+  background: #5a8fa6; }
+
+/**
+ * ************************************************************************\
+ * MEDIA QUERIES
+ * \*************************************************************************
+ */
+@media screen and (max-width: 580px) {
+  .strategy .title {
+    font-size: 20px; }
+  .strategy div.has-big-hexa {
+    display: flex;
+    text-align: center;
+    flex-direction: column; }
+  .strategy .infos {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center; }
+    .strategy .infos p {
+      text-align: center;
+      font-size: 14px; }
+      .strategy .infos p span {
+        color: #636363; }
+
+  .svg-container-pilliers {
+    justify-content: center; }
+
+  .svg-container-pilliers div {
+    width: 20px;
+    height: 100px;
+    margin: 3px; }
+
+  .svg-container-pilliers p {
+    color: #fff;
+    font-size: 10px; }
+
+  .pillier svg,
+  .priority svg {
+    width: 100%; }
+
+  figure {
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center; }
+
+  figure figcaption {
+    display: flex;
+    position: absolute;
+    max-width: 50%;
+    margin: 0 auto;
+    color: #fff;
+    flex-wrap: wrap; }
+
+  .has-big-hexa div {
+    max-width: 100%; }
+
+  .objectif-1 ul,
+  .objectif-2 ul,
+  .objectif-3 ul,
+  .objectif-4 ul {
+    display: flex;
+    position: relative;
+    justify-content: space-around;
+    list-style-type: none; }
+    .objectif-1 ul li h1,
+    .objectif-2 ul li h1,
+    .objectif-3 ul li h1,
+    .objectif-4 ul li h1 {
+      position: absolute;
+      top: -48px;
+      left: 5px;
+      color: #000;
+      font-size: 12px !important; }
+    .objectif-1 ul li span,
+    .objectif-2 ul li span,
+    .objectif-3 ul li span,
+    .objectif-4 ul li span {
+      position: absolute !important;
+      left: 5px;
+      margin-top: 5px;
+      padding-top: 5px;
+      text-align: center;
+      font-size: 12px !important; }
+
+  /**
+  * ************************************************************************\
+  * OBJECTIF 1
+  * \*************************************************************************
+  */
+  .objectif-1 li:first-child h1 {
+    font-size: 15px; }
+  .objectif-1 li:first-child span {
+    top: 30px; }
+
+  .objectif-1 li:nth-child(2)::before {
+    content: '';
+    position: absolute;
+    top: 11.76471%;
+    left: -393.84615%;
+    width: 453.84615%;
+    height: 1px;
+    background: #000;
+    transform: translateY(4px) translateX(-1px) rotate(1deg); }
+
+  .objectif-1 li:nth-child(3) {
+    top: -5px;
+    width: 7%;
+    height: 0;
+    padding-top: 7%; }
+
+  .objectif-1 li:nth-child(3)::before {
+    content: '';
+    position: absolute;
+    top: 13.33333%;
+    left: -236.84211%;
+    width: 300%;
+    height: 1px;
+    color: red;
+    background: #000;
+    transform: translateY(7px) translateX(-1px) rotate(-2deg); }
+
+  .objectif-1 li:nth-child(4) {
+    top: -12px;
+    width: 7%;
+    height: 0;
+    padding-top: 7%; }
+
+  .objectif-1 li:nth-child(4)::before {
+    content: '';
+    position: absolute;
+    top: 13.33333%;
+    left: -243.24324%;
+    width: 321.42857%;
+    height: 1px;
+    color: red;
+    background: #000;
+    transform: translateY(10px) translateX(-1px) rotate(-4deg); }
+
+  .objectif-1 li:last-child {
+    top: -18px;
+    width: 7%;
+    height: 0;
+    padding-top: 7%;
+    background: #5a8fa6; }
+
+  .objectif-1 li:last-child::before {
+    content: '';
+    position: absolute;
+    top: 37%;
+    left: -232.72727%;
+    width: 284.44444%;
+    height: 1px;
+    background: #000;
+    transform: translateY(5px) translateX(-1px) rotate(-5deg); }
+
+  /**
+  * ************************************************************************\
+  * OBJECTIF 2
+  * \*************************************************************************
+  */
+  .objectif-2 ul li {
+    display: inline-block;
+    position: relative;
+    width: 7%;
+    height: 0;
+    padding-top: 7%;
+    color: black;
+    border: 1px solid #000;
+    border-radius: 55%;
+    text-align: center; }
+
+  .objectif-2 li:nth-child(2) {
+    top: -4px;
+    width: 7%;
+    height: 0;
+    padding-top: 7%; }
+
+  .objectif-2 li:nth-child(2)::before {
+    content: '';
+    position: absolute;
+    top: 26.66667%;
+    left: -232.72727%;
+    width: 290.90909%;
+    height: 1px;
+    background: #000;
+    transform: translateY(5px) translateX(-1px) rotate(-1deg); }
+
+  .objectif-2 li:nth-child(3) {
+    top: -10px;
+    width: 7%;
+    height: 0;
+    padding-top: 7%; }
+
+  .objectif-2 li:nth-child(3)::before {
+    content: '';
+    position: absolute;
+    top: 33.33333%;
+    left: -232.72727%;
+    width: 301.17647%;
+    height: 1px;
+    background: #000;
+    transform: translateY(6.7px) translateX(-1px) rotate(-5deg); }
+
+  .objectif-2 li:nth-child(4) {
+    top: -15px;
+    width: 7%;
+    height: 0;
+    padding-top: 7%; }
+
+  .objectif-2 li:nth-child(4)::before {
+    content: '';
+    position: absolute;
+    top: 30.76923%;
+    left: -232.72727%;
+    width: 301.17647%;
+    height: 1px;
+    background: #000;
+    transform: translateY(7.5px) translateX(-1px) rotate(-3.7deg); }
+
+  .objectif-2 li:last-child {
+    top: -20px;
+    width: 7%;
+    height: 0;
+    padding-top: 7%;
+    background: #5a8fa6; }
+
+  .objectif-2 li:last-child::before {
+    content: '';
+    position: absolute;
+    top: 33.33333%;
+    left: -237.03704%;
+    width: 284.44444%;
+    height: 1px;
+    background: #000;
+    transform: translateY(6.7px) translateX(-1px) rotate(-4deg); }
+
+  /**
+  * ************************************************************************\
+  * OBJECTIF 3
+  * \*************************************************************************
+  */
+  .objectif-3 ul li {
+    display: inline-block;
+    position: relative;
+    width: 7%;
+    height: 0;
+    padding-top: 7%;
+    color: black;
+    border: 1px solid #000;
+    border-radius: 55%;
+    text-align: center; }
+
+  .objectif-3 li:nth-child(2) {
+    top: 4px;
+    width: 7%;
+    height: 0;
+    padding-top: 7%; }
+
+  .objectif-3 li:nth-child(2)::before {
+    content: '';
+    position: absolute;
+    top: 9.52381%;
+    left: -232.72727%;
+    width: 284.44444%;
+    height: 1px;
+    background: #000;
+    transform: translateY(8px) translateX(-1px) rotate(2deg); }
+
+  .objectif-3 li:nth-child(3) {
+    top: -4px;
+    width: 7%;
+    height: 0;
+    padding-top: 7%; }
+
+  .objectif-3 li:nth-child(3)::before {
+    content: '';
+    position: absolute;
+    top: 36.36364%;
+    left: -237.03704%;
+    width: 301.17647%;
+    height: 1px;
+    background: #000;
+    transform: translateY(7px) translateX(-1px) rotate(-7deg); }
+
+  .objectif-3 li:nth-child(4) {
+    top: -10px;
+    width: 7%;
+    height: 0;
+    padding-top: 7%; }
+
+  .objectif-3 li:nth-child(4)::before {
+    content: '';
+    position: absolute;
+    top: 30.76923%;
+    left: -232.72727%;
+    width: 301.17647%;
+    height: 1px;
+    background: #000;
+    transform: translateY(7px) translateX(-1px) rotate(-6deg); }
+
+  .objectif-3 li:last-child {
+    top: -15px;
+    width: 7%;
+    height: 0;
+    padding-top: 7%;
+    background: #5a8fa6; }
+
+  .objectif-3 li:last-child::before {
+    content: '';
+    position: absolute;
+    top: 31.57895%;
+    left: -222.22222%;
+    width: 266.66667%;
+    height: 1px;
+    background: #000;
+    transform: translateY(6px) translateX(-1px) rotate(-5deg); }
+
+  /**
+  * ************************************************************************\
+  * OBJECTIF 4
+  * \*************************************************************************
+  */
+  .objectif-4 ul li {
+    display: inline-block;
+    position: relative;
+    width: 7%;
+    height: 0;
+    padding-top: 7%;
+    color: black;
+    border: 1px solid #000;
+    border-radius: 55%;
+    text-align: center; } }
 
 /*# sourceMappingURL=style.css.map */
