Corrections + amélioration pages

--- a/assets/css/pages/index.css
+++ b/assets/css/pages/index.css
@@ -1,12 +1,3 @@
-@font-face {
-  font-family: 'ITCAvantGarde';
-  src: url("../../fonts/itc-avant-garde.otf"); }
-body {
-  margin: auto;
-  font-family: 'ITCAvantGarde';
-  background-color: #f8f8f8;
-  font-size: 14px; }
-
 /** HEADER **/
 header {
   background-color: #fff;
@@ -19,6 +10,7 @@ header {
   position: absolute;
   font-weight: 700;
   right: 0;
+  font-size: 20px;
   width: 73px;
   margin-top: -45px;
   line-height: 0.882;
@@ -26,6 +18,16 @@ header {
   .regards .textR {
     font-weight: lighter;
     display: block; }
+  .regards .textR2 {
+    font-size: 14px;
+    font-weight: bold;
+    display: block; }
+
+.regards2 span {
+  color: #e79655; }
+
+.regards span {
+  color: black; }
 
 ul {
   margin-left: -41px; }
@@ -42,7 +44,7 @@ ul {
     -webkit-transform: matrix(2.25798, 0, 0, 2.25798, 0, 0);
     -ms-transform: matrix(2.25798, 0, 0, 2.25798, 0, 0);
     position: absolute;
-    left: 250.218px;
+    left: 218.218px;
     top: 97.126px;
     width: 101.253px;
     height: 49.982px;
@@ -55,7 +57,7 @@ ul {
 .menu {
   padding: 1%;
   display: block;
-  height: 44px; }
+  height: 50px; }
 
 nav {
   display: none; }
@@ -133,8 +135,8 @@ nav {
   background-color: #0d2e86; }
 
 /** CONTENU **/
-#bg {
-  background-image: url("../../img/home/axa_hopwork_070.jpg");
+#bgIndex {
+  background-image: url("../img/home/axa_hopwork_070.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   height: 100vh;
@@ -150,7 +152,7 @@ nav {
 .polygon li {
   position: absolute; }
   .polygon li svg {
-    width: 218px;
+    width: 236px;
     height: 252px; }
 
 .polygonSVG {
@@ -164,7 +166,7 @@ nav {
   transform: rotate(29deg);
   display: block; }
   .contentSVG p {
-    font-size: 18px;
+    font-size: 16px;
     color: white;
     font-weight: bold;
     line-height: 1.333;
@@ -178,49 +180,50 @@ nav {
     left: 50%; }
 
 .polygon li:nth-child(1) {
-  left: 291px;
+  left: 219px;
   top: 208px; }
 
 .polygon li:nth-child(1) p {
-  left: 35px; }
+  left: 47px; }
 
 .polygon li:nth-child(2) {
-  left: 387px;
-  top: 369px; }
+  left: 325px;
+  top: 382px; }
 
 .polygon li:nth-child(2) p {
-  left: 35px; }
+  left: 59px;
+  top: 91px; }
 
 .polygon li:nth-child(3) {
-  left: 479px;
+  left: 422px;
   top: 205px; }
 
 .polygon li:nth-child(3) p {
-  left: 7px;
+  left: 71px;
   top: 91px; }
 
 .polygon li:nth-child(4) {
-  left: 667px;
+  left: 625px;
   top: 202px; }
 
 .polygon li:nth-child(4) p {
-  left: 51px;
-  top: 91px; }
+  left: 63px;
+  top: 102px; }
 
 .polygon li:nth-child(5) {
-  left: 764px;
-  top: 364px; }
+  left: 730px;
+  top: 376px; }
 
 .polygon li:nth-child(5) p {
-  left: 51px;
-  top: 91px; }
+  left: 58px;
+  top: 90px; }
 
 .polygon li:nth-child(6) {
-  left: 576px;
-  top: 367px; }
+  left: 527px;
+  top: 380px; }
 
 .polygon li:nth-child(6) p {
-  left: 51px;
+  left: 56px;
   top: 91px; }
 
 .polygon li svg:hover #Polygone1 {
@@ -242,13 +245,14 @@ nav {
   fill: yellow; }
 
 footer {
-  position: absolute;
+  position: fixed;
   display: block;
   bottom: 0;
   padding: 8px;
   background-color: black; }
   footer .share {
-    display: none; }
+    display: block;
+    position: fixed; }
 
 /** RESPONSIVE **/
 @media screen and (max-width: 580px) {
@@ -307,14 +311,16 @@ footer {
 
   .logo {
     position: absolute;
-    left: 88px;
+    left: 67px;
     top: 86px; }
     .logo img {
-      width: 76%; }
+      margin: -2px;
+      width: 72%;
+      margin-left: 41px; }
 
   .polygon {
     margin: auto;
-    position: relative; }
+    position: absolute; }
     .polygon:after {
       content: "";
       display: table;
@@ -340,10 +346,10 @@ footer {
     font-weight: bold;
     font-size: 30px;
     color: black;
-    right: 9px;
-    top: 140px;
+    right: 7px;
+    top: 145px;
     text-align: center; }
-    .regards .textR {
+    .regards .textR2 {
       display: none; }
 
   .content {
@@ -359,13 +365,22 @@ footer {
     left: 25px;
     top: 188px; }
 
+  .polygon li:nth-child(2) p {
+    left: 59px;
+    top: 58px; }
+
   .polygon li:nth-child(3) {
     left: 163px;
     top: 109px; }
 
   .polygon li:nth-child(3) p {
     left: 28px;
-    width: 136px; }
+    width: 136px;
+    top: 58px; }
+
+  .polygon li:nth-child(4) p {
+    left: 51px;
+    top: 58px; }
 
   .polygon li svg {
     width: 185px;
@@ -376,7 +391,7 @@ footer {
     top: 268px; }
 
   /**  CONTENT **/
-  #bg {
+  #bgIndex {
     height: 100vh;
     background-position: 17%, 50%; }
 
@@ -400,7 +415,7 @@ footer {
   footer {
     position: fixed;
     display: block;
-    bottom: 0;
+    top: 604px;
     padding: 8px;
     background-color: black; }
     footer .share {
